--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -28,7 +28,12 @@
 	"extensions": [
 		"golang.Go"
 	],
-
+	"features": {
+		"docker-from-docker": "latest",
+		"git": "latest",
+		"git-lfs": "latest",
+		"github-cli": "latest"
+	},
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
 
